<resources>
    <string name="app_name">SchoolBusTrackerDriver</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="attendance">attendance</string>
    <string name="profile">profile</string>
    <string name="google_api_key">AIzaSyDpmCLshOeUcGllKLXDrHKooRQO9VVj1us</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="location">location</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_attendanceList">Attendance List</string>
    <string name="menu_addStudent">Add Student</string>
    <string name="menu_location">Location</string>
    <string name="menu_signOut">Sign Out</string>
    <string name="open">Open Drawer</string>
    <string name="close">Close Drawer</string>
</resources>